K league Lengend added

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -232,6 +232,7 @@
         <item>Korean Legend</item>
         <item>2002 Legend</item>
         <item>ManU E</item>
+        <item>K League Legend</item>
         <item>16 Korea Legend</item>
         <item>Special</item>
     </string-array>
