--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,6 +235,7 @@
         <item>2002 Legend</item>
         <item>ManU E</item>
         <item>16 Korea Legend</item>
+        <item>K League Legend</item>
         <item>Special</item>
     </string-array>
 
