--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -230,6 +230,7 @@
         <item>Korean Legend</item>
         <item>2002 Legend</item>
         <item>ManU E</item>
+        <item>K League Legend</item>
         <item>16 Korea Legend</item>
         <item>Special</item>
     </string-array>
