--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -178,6 +178,7 @@
     <string name="legend">legend</string>
     <string name="season_prompt">season select</string>
     <string-array name="season_array">
+        <item>22</item>
         <item>17</item>
         <item>16</item>
         <item>15</item>
@@ -216,7 +217,10 @@
         <item>14 U</item>
         <item>13 U</item>
         <item>12 U</item>
+        <item>11 U</item>
         <item>10 U</item>
+        <item>09 U</item>
+        <item>07 U</item>
         <item>06 U</item>
         <item>12 E</item>
         <item>08 E</item>
@@ -232,6 +236,7 @@
         <item>ManU E</item>
         <item>K League Legend</item>
         <item>16 Korea Legend</item>
+        <item>Ultimate Tiger</item>
         <item>Special</item>
     </string-array>
 
