ultimate Tiger 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,7 +240,7 @@
         <item>ManU E</item>
         <item>16 Korea Legend</item>
         <item>K League Legend</item>
-        <item>Ultimate Tiger</item>
+        <item>얼티밋 타이거</item>
         <item>Special</item>
     </string-array>
 
