--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -545,7 +545,7 @@
     
     <!-- 사용법 -->
      <string name="developer">개발자 : todriver08</string>
-      <string name="son">EPL에서 손흥민 선수의 플레이를 응원합니다.</string>
-    <string name="manual">&#160;&#160;MyFaceOn 사용법 \n \n &#160; &#160; &#160;1. 프로필 생성을 누릅니다. \n\n &#160; &#160; &#160;2. 시즌,국가 등 원하는 값을 선택 또는 입력합니다. \n\n &#160; &#160; &#160;3. 입력 완료 후 사진을 불러옵니다. \n\n &#160; &#160; &#160;4. 저장하기를 누릅니다 \n\n &#160; &#160; &#160;끝!  \n\n &#160; &#160; &#160;공유하기로 친구의 프로필을 만들어 친구에게 \n&#160;&#160;&#160;   보내보세요! \n</string>
+    <string name="privacy">개인정보처리방침</string>
+    <string name="manual">이 앱은 카메라 권한을 필요로 합니다.\n카메라는 사진 촬영 및 앨범 접근용으로 사용하며 별도로 수집되거나 사용되지 않습니다.\n감사합니다.\n</string>
 
 </resources>
