--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,7 @@
         <item>98</item>
     </string-array>
     <string-array name="special_array">
+        <item>CP</item>
         <item>LP</item>
         <item>16 유럽 아메리카</item>
         <item>U-23</item>
