--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,7 +234,7 @@
 
 
     <string-array name="legend_array">
-        <item>Ultimate Lengend</item>
+        <item>Ultimate Legend</item>
         <item>World Legend</item>
         <item>WORLD BEST</item>
         <item>EU Legend</item>
