--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -204,6 +204,7 @@
     </string-array>
     <string-array name="special_array">
         <item>CP</item>
+        <item>CC</item>
         <item>LP</item>
         <item>16 EC</item>
         <item>U-23</item>
@@ -233,6 +234,7 @@
 
     <string-array name="legend_array">
         <item>Ultimate Legend</item>
+        <item>Ultimate Best</item>
         <item>World Legend</item>
         <item>WORLD BEST</item>
         <item>EU Legend</item>
