--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -447,7 +447,7 @@
         <item>Injury Free</item>
         <item>Injury Prone</item>
         <item>Late Crosser</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throw in</item>
@@ -467,7 +467,7 @@
         <item>Risk Taker</item>
         <item>Rushes Out Of Goal</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Solid player</item>
         <item>Speed Dribbler</item>
         <item>Stays On Goal Line</item>
@@ -504,7 +504,7 @@
         <item>Inflexible</item>
         <item>Injury Free</item>
         <item>Injury Prone</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throws</item>
@@ -512,7 +512,7 @@
         <item>Play Maker</item>
         <item>Power Header</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Swerve Passer</item>
     </string-array>
 
