--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -448,7 +448,7 @@
         <item>Injury Free</item>
         <item>Injury Prone</item>
         <item>Late Crosser</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throw in</item>
@@ -468,7 +468,7 @@
         <item>Risk Taker</item>
         <item>Rushes Out Of Goal</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Solid player</item>
         <item>Speed Dribbler</item>
         <item>Stays On Goal Line</item>
@@ -505,7 +505,7 @@
         <item>Inflexible</item>
         <item>Injury Free</item>
         <item>Injury Prone</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throws</item>
@@ -513,7 +513,7 @@
         <item>Play Maker</item>
         <item>Power Header</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Swerve Passer</item>
     </string-array>
 
