--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -449,7 +449,7 @@
         <item>Injury Free</item>
         <item>Injury Prone</item>
         <item>Late Crosser</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throw in</item>
@@ -469,7 +469,7 @@
         <item>Risk Taker</item>
         <item>Rushes Out Of Goal</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Solid player</item>
         <item>Speed Dribbler</item>
         <item>Stays On Goal Line</item>
