--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -446,7 +446,7 @@
         <item>Injury Free</item>
         <item>Injury Prone</item>
         <item>Late Crosser</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throw in</item>
@@ -466,7 +466,7 @@
         <item>Risk Taker</item>
         <item>Rushes Out Of Goal</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Solid player</item>
         <item>Speed Dribbler</item>
         <item>Stays On Goal Line</item>
@@ -503,7 +503,7 @@
         <item>Inflexible</item>
         <item>Injury Free</item>
         <item>Injury Prone</item>
-        <item>﻿Leadership</item>
+        <item>Leadership</item>
         <item>Long Passer</item>
         <item>Long Shot Taker</item>
         <item>Long Throws</item>
@@ -511,7 +511,7 @@
         <item>Play Maker</item>
         <item>Power Header</item>
         <item>Second Wind</item>
-        <item>Selfish﻿﻿</item>
+        <item>Selfish</item>
         <item>Swerve Passer</item>
     </string-array>
 
